Voltar ao inicio

--- a/arvore.html
+++ b/arvore.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   </head>
   <body>
+    <a href="./index.html" style="text-decoration: none; color: black;"> Voltar ao início </a>
     <h1 style="text-align: center">Árvore Binária</h1>
     <form id='form' style="display: flex; justify-content: center; align-items: center;">
         <input id="valor" type="text" placeholder="Adicione um valor"/>
