--- a/fila.html
+++ b/fila.html
@@ -23,6 +23,7 @@
     ></script>
   </head>
   <body>
+    <a href="./index.html" style="text-decoration: none; color: black;"> Voltar ao início </a>
     <input type="text" placeholder="Adicione um número" class="form-control" />
 
     <button class="add btn btn-primary" type="submit">Adicionar à Fila</button>
