--- a/pilha.html
+++ b/pilha.html
@@ -22,6 +22,8 @@
     <script src="pilha.js" defer></script>
   </head>
   <body>
+    <a href="./index.html" style="text-decoration: none; color: black;"> Voltar ao início </a>
+    
     <input type="text" placeholder="Digite um valor" class="form-control" />
 
     <button class="addPilha btn btn-primary" type="submit">
