--- a/hash.html
+++ b/hash.html
@@ -22,6 +22,8 @@
     ></script>
   </head>
   <body>
+    <a href="./index.html" style="text-decoration: none; color: black;"> Voltar ao início </a>
+    
     <input
       type="text"
       class="form-control"
